<resources>
    <string name="app_name">考勤系统</string>
    <string name="sign_up_now">立即注册</string>
    <string name="find_key">找回密码</string>
    <string name="sign_in">登录</string>
    <string name="hint_password">密码</string>
    <string name="hint_name">用户名</string>
    <string name="already_sign_up">已经注册，请登录</string>
    <string name="sign_up">注册</string>
    <string name="hint_confirm_password">请再次输入密码</string>
    <string name="hint_email">请输入邮箱账号</string>
    <string name="success_sign_up">注册成功</string>
    <string name="username_already_taken">用户名已被注册</string>
    <string name="email_already_taken">邮箱已被注册</string>
    <string name="error_sign_up">注册失败</string>
    <string name="btn_confirm">确定</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
</resources>
